--- a/templates/base.html
+++ b/templates/base.html
@@ -351,7 +351,7 @@ function DoWin(namehtm,wwin,hwin) {
 
     </div>
   </div>
-  <div id="header" class="n_info">
+  <div id="header" class="n_contact">
 <div id="divaddtocart"></div>
     <ul id="nav">
       <li id="n_energo">
@@ -387,6 +387,7 @@ function DoWin(namehtm,wwin,hwin) {
           <input type="submit" id="btn_srch" value="поиск" title="поиск">
         </fieldset>
       </form>    </div>
+
     <div class="cart-block">
       <h2>Ваша корзина</h2>
       <span id="carttext">
@@ -399,6 +400,7 @@ function DoWin(namehtm,wwin,hwin) {
       </span>
       <a href="http://energoforum/shoppingcart.html" class="btn_offer">оформить заказ <span></span></a>
     </div>
+
   </div>
   <div id="footer">
     <hr>
