--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -6,6 +6,11 @@
 
             <h1>{{info.title}} </h1>
            {{info.mainText|safe|default:'' }}
+<!--  Баннер -->
+      <div id="adv1">
+        <img src="./Энерго форумindex_files/ill-02.jpg" alt="Баннер 500 х 100">
+      </div>
+<!-- /Баннер -->
 
 </div>
 {% endblock %}
