--- a/content/templates/temp.html
+++ b/content/templates/temp.html
@@ -1,251 +1,269 @@
-<!doctype html>
+    
+        <div class="app-energotechnology module">
+        <table>
 
+        <caption>
+            <a href="/admin/energotechnology/" class="section" title="Модели в приложении Энерготехнологии ">Энерготехнологии </a>
+        </caption>
+        
+            <tr class="model-energotechnologywater">
+            
+                <th scope="row"><a href="/admin/energotechnology/energotechnologywater/">Вода</a></th>
+            
 
+            
+                <td><a href="/admin/energotechnology/energotechnologywater/add/" class="addlink">Добавить</a></td>
+            
 
-<head>
-   <meta name="language" content="ru">
+            
+                <td><a href="/admin/energotechnology/energotechnologywater/" class="changelink">Изменить</a></td>
+            
+            </tr>
+        
+            <tr class="model-energotechnologyeast">
+            
+                <th scope="row"><a href="/admin/energotechnology/energotechnologyeast/">Земля</a></th>
+            
 
+            
+                <td><a href="/admin/energotechnology/energotechnologyeast/add/" class="addlink">Добавить</a></td>
+            
 
-  <link rel="stylesheet" href="/static/css/main.css" media="screen,projection">
+            
+                <td><a href="/admin/energotechnology/energotechnologyeast/" class="changelink">Изменить</a></td>
+            
+            </tr>
+        
+            <tr class="model-energotechnologyall">
+            
+                <th scope="row"><a href="/admin/energotechnology/energotechnologyall/">Общая информация</a></th>
+            
 
+            
+                <td><a href="/admin/energotechnology/energotechnologyall/add/" class="addlink">Добавить</a></td>
+            
 
+            
+                <td><a href="/admin/energotechnology/energotechnologyall/" class="changelink">Изменить</a></td>
+            
+            </tr>
+        
+            <tr class="model-energotechnologyosveshenie">
+            
+                <th scope="row"><a href="/admin/energotechnology/energotechnologyosveshenie/">Освещение</a></th>
+            
 
+            
+                <td><a href="/admin/energotechnology/energotechnologyosveshenie/add/" class="addlink">Добавить</a></td>
+            
 
+            
+                <td><a href="/admin/energotechnology/energotechnologyosveshenie/" class="changelink">Изменить</a></td>
+            
+            </tr>
+        
+            <tr class="model-energotechnologyotoplenie">
+            
+                <th scope="row"><a href="/admin/energotechnology/energotechnologyotoplenie/">Отопление</a></th>
+            
 
-</head>
+            
+                <td><a href="/admin/energotechnology/energotechnologyotoplenie/add/" class="addlink">Добавить</a></td>
+            
 
+            
+                <td><a href="/admin/energotechnology/energotechnologyotoplenie/" class="changelink">Изменить</a></td>
+            
+            </tr>
+        
+            <tr class="model-energotechnologysun">
+            
+                <th scope="row"><a href="/admin/energotechnology/energotechnologysun/">Солнце</a></th>
+            
 
+            
+                <td><a href="/admin/energotechnology/energotechnologysun/add/" class="addlink">Добавить</a></td>
+            
 
-<body>
-
-  <div id="wrapper">
-  <div id="logo"><dfn>Энерго</dfn>Форум <a href="http://energoforum/index.html">(на главную)</a></div>
-  <div id="content">      <div id="content-text">
-            <h1>FAQ</h1>
-            <p>
-<table class="\&quot;\\&quot;data-table\\&quot;\&quot;" border="\&quot;\\&quot;0\\&quot;\&quot;" cellspacing="\&quot;\\&quot;0\\&quot;\&quot;" cellpadding="\&quot;\\&quot;0\\&quot;\&quot;" width="\&quot;\\&quot;100%\\&quot;\&quot;">
-<tbody>
-<tr>
-<th>Почему лучше покупать стабилизаторы именно ТМ Volter? </th>
-</tr>
-<tr>
-<td>Мы предлагаем качественные приборы стабилизации напряжения, при производстве которых используются новейшие технологии. В результате наши приборы отвечают всем требованиям безопасности и надёжности.</td>
-</tr>
-</tbody>
-</table>
-<br><br>
-<table class="\&quot;\\&quot;data-table\\&quot;\&quot;" border="\&quot;\\&quot;0\\&quot;\&quot;" cellspacing="\&quot;\\&quot;0\\&quot;\&quot;" cellpadding="\&quot;\\&quot;0\\&quot;\&quot;" width="\&quot;\\&quot;100%\\&quot;\&quot;">
-<tbody>
-<tr>
-<th>Сколько моделей ТМ Volter у Вас представлено? </th>
-</tr>
-<tr>
-<td>Модельный ряд Volter включает 108 различных стабилизаторов.</td>
-</tr>
-</tbody>
-</table>
-<br>
-<table class="\&quot;\\&quot;data-table\\&quot;\&quot;" border="\&quot;\\&quot;0\\&quot;\&quot;" cellspacing="\&quot;\\&quot;0\\&quot;\&quot;" cellpadding="\&quot;\\&quot;0\\&quot;\&quot;" width="\&quot;\\&quot;100%\\&quot;\&quot;">
-<tbody>
-<tr>
-<th>Что такое ISO 9001? </th>
-</tr>
-<tr>
-<td>Международные стандарты, которые применяются при организации системы управления качеством.</td>
-</tr>
-</tbody>
-</table>
-<br>
-<table class="\&quot;\\&quot;data-table\\&quot;\&quot;" border="\&quot;\\&quot;0\\&quot;\&quot;" cellspacing="\&quot;\\&quot;0\\&quot;\&quot;" cellpadding="\&quot;\\&quot;0\\&quot;\&quot;" width="\&quot;\\&quot;100%\\&quot;\&quot;">
-<tbody>
-<tr>
-<th>Где можно ознакомится с сертификатами на Вашу продукцию? </th>
-</tr>
-<tr>
-<td>На нашем сайте, в разделе «О ТМ Volter» - Сертификаты на продукцию Volter.</td>
-</tr>
-</tbody>
-</table>
-<br><br>&nbsp;</p>
+            
+                <td><a href="/admin/energotechnology/energotechnologysun/" class="changelink">Изменить</a></td>
+            
+            </tr>
+        
+        </table>
         </div>
-    <div id="sidebar">
-      <div class="news">
-        <ul id="sidenav">
-          <li>
-            <a href="http://energoforum/energotechnology.html">Энерготехнологии</a>
-                       </li>
-          <li><a href="http://energoforum/info.html">Информация</a></li>
-          <li><a href="http://energoforum/forum">Форум</a></li>
-          <li>
-          	<a href="http://energoforum/catalog.html">Магазин</a>
-          	          </li>
-          <li><a href="http://energoforum/faq.html">FAQ</a></li>
-          <li><a href="http://energoforum/contact.html">Контакты</a></li>
-        </ul>
-        <h2>Новости</h2>
-        <ul class="news">
-                <li>
-            <a class="ill-news" href="http://energoforum/onenews/6.html">
-                          <img alt="новость" src="./Энерго форум_files/noimage.jpg">
-                        </a>
-            <var class="date">27.08.2010</var>
-            <p>123 ... </p>
-            <a href="http://energoforum/onenews/6.html" class="more">подробней</a>
-          </li>
-                <li>
-            <a class="ill-news" href="http://energoforum/onenews/7.html">
-                          <img alt="новость" src="./Энерго форум_files/noimage.jpg">
-                        </a>
-            <var class="date">27.08.2010</var>
-            <p>sdf ... </p>
-            <a href="http://energoforum/onenews/7.html" class="more">подробней</a>
-          </li>
-                <li>
-            <a class="ill-news" href="http://energoforum/onenews/1.html">
-                          <img alt="новость" src="./Энерго форум_files/noimage.jpg">
-                        </a>
-            <var class="date">25.04.2010</var>
-            <p>Акция! ... </p>
-            <a href="http://energoforum/onenews/1.html" class="more">подробней</a>
-          </li>
-              </ul>
-      </div>
-      <div id="adv2">
-        <img src="./Энерго форум_files/ill-06.jpg" alt="баннер 250 х 130">
-      </div>
-       <div class="vote">
-        <h2>У вас есть дома стабилизатор?</h2>
-        <form class="vote-form" method="post" action="http://energoforum/index.html">
-      <div class="message"></div>
-        <input type="hidden" name="opros_submit" value="1">
-            <fieldset>
-      		      		<input type="radio" checked="checked" id="v6" name="cash" value="6">
-      		<label for="v6">Да</label>
-      		<br>
-      		      		<input type="radio" checked="checked" id="v7" name="cash" value="7">
-      		<label for="v7">Нет</label>
-      		<br>
-      		      		<input type="radio" checked="checked" id="v8" name="cash" value="8">
-      		<label for="v8">Есть у соседей</label>
-      		<br>
 
-            <fieldset class="btn_wrapper">
-              <input type="submit" id="btn_submit" value="Голосовать" title="Голосовать">
-              <a href="http://energoforum/skipopros.html" class="result">Результаты</a>
-            </fieldset>
- 			</fieldset>
-			</form>
-     </div>
 
-      <div class="testimonials">
-        <h2>Отзывы</h2>
-        <ul>
-              	      <li>
-            <span class="name">Вита</span>
-            <var class="date">03.09.2010</var>
-            <dfn class="rating r5">отлично<span></span></dfn>
-            <p>Купила один из стабилизаторов. Стоит дома....<a href="http://energoforum/testimonials.html"> подробнее</a> </p>
-          </li>
-  		  	      <li>
-            <span class="name">123</span>
-            <var class="date">03.09.2010</var>
-            <dfn class="rating r3">нормально<span></span></dfn>
-            <p>123<a href="http://energoforum/testimonials.html"> подробнее</a> </p>
-          </li>
-  		  	      <li>
-            <span class="name">Мария</span>
-            <var class="date">27.08.2010</var>
-            <dfn class="rating r5">отлично<span></span></dfn>
-            <p>Хорошая продукция. Ниче так. Я довольна....<a href="http://energoforum/testimonials.html"> подробнее</a> </p>
-          </li>
-  		        </ul>
-        <a href="http://energoforum/testimonials.html">добавить отзыв</a>
-      </div>    </div>
-  </div>
-  <div id="header" class="n_faq">
-<div id="divaddtocart"></div>
-    <ul id="nav">
-      <li id="n_energo">
-        <a href="http://energoforum/energotechnology.html">Энерготехнологии</a>
-        <ul>
-          <li><a href="http://energoforum/sun.html">Солнце</a></li>
-          <li><a href="http://energoforum/water.html">Вода</a></li>
-          <li><a href="http://energoforum/east.html">Земля</a></li>
-          <li><a href="http://energoforum/osveshenie.html">Освещение</a></li>
-          <li><a href="http://energoforum/otoplenie.html">Отопление</a></li>
-        </ul>
-      </li>
-      <li id="n_info"><a href="http://energoforum/info.html">Информация</a></li>
-      <li id="n_shop">
-      	<a href="http://energoforum/catalog.html">Магазин</a>
-      </li>
-      <li id="n_faq" class="sel"><a href="http://energoforum/faq.html">FAQ</a></li>
-      <li id="n_contact"><a href="http://energoforum/contact.html">Контакты</a></li>
-    </ul>
-    <span class="tel">(057) 750-75-86</span>
-    <ul class="mini_nav">
-      <li class="cart"><a href="http://energoforum/shoppingcart.html" title="Корзина">Корзина</a></li>
-      <li class="site-map"><a href="http://energoforum/map.html" title="Карта Сайта">Карта Сайта</a></li>
-      <li class="contact"><a href="http://energoforum/contact.html" title="Контакты">Контакты</a></li>
-    </ul>
-    <div class="search">
-      <div id="adv3">
-        <img src="./Энерго форум_files/ill-07.jpg" alt="баннер">
-      </div>
-      <form class="search-form" action="http://energoforum/search.html" method="get">
-        <fieldset>
-          <input type="text" id="srch" name="search">
-          <input type="submit" id="btn_srch" value="поиск" title="поиск">
-        </fieldset>
-      </form>    </div>
-    <div class="cart-block">
-      <h2>Ваша корзина</h2>
-      <span id="carttext">
-      <dl>
-        <dt>Товаров:</dt>
-          <dd>0</dd>
-        <dt>На сумму:</dt>
-          <dd>0 грн.</dd>
-      </dl>
-      </span>
-      <a href="http://energoforum/shoppingcart.html" class="btn_offer">оформить заказ <span></span></a>
+         <div class="app-content module">
+        <table>
+
+        <caption>
+            <h4>Статическии страницы</h4>
+        </caption>
+
+            <tr class="model-faq">
+
+                <th scope="row"><a href="/admin/staticpages/faq/">FAQ</a></th>
+
+
+
+                <td><a href="/admin/staticpages/faq/add/" class="addlink">Добавить</a></td>
+
+
+
+                <td><a href="/admin/staticpages/faq/" class="changelink">Изменить</a></td>
+
+            </tr>
+
+
+
+            <tr class="model-maintext">
+
+                <th scope="row"><a href="/admin/staticpages/maintext/">Информация на главной странице</a></th>
+
+
+
+                <td><a href="/admin/staticpages/maintext/add/" class="addlink">Добавить</a></td>
+
+
+
+                <td><a href="/admin/staticpages/maintext/" class="changelink">Изменить</a></td>
+
+            </tr>
+
+            <tr class="model-infotext">
+
+                <th scope="row"><a href="/admin/staticpages/infotext/">Информация на на странице информации</a></th>
+
+
+
+                <td><a href="/admin/staticpages/infotext/add/" class="addlink">Добавить</a></td>
+
+
+
+                <td><a href="/admin/staticpages/infotext/" class="changelink">Изменить</a></td>
+
+            </tr>
+
+            <tr class="model-contact">
+
+                <th scope="row"><a href="/admin/staticpages/contact/">Контакты</a></th>
+
+
+
+                <td><a href="/admin/staticpages/contact/add/" class="addlink">Добавить</a></td>
+
+
+
+                <td><a href="/admin/staticpages/contact/" class="changelink">Изменить</a></td>
+
+            </tr>
+
+            <tr>
+
+
+                <div class="app-energotechnology module">
+        <table>
+
+
+           <tr class="model-energotechnologyall">
+                <th scope="row"><a href="/admin/energotechnology/energotechnologyall/"> Энерготехнологии </a></th>
+
+
+
+                <td><a href="/admin/energotechnology/energotechnologyall/add/" class="addlink">Добавить</a></td>
+
+
+
+                <td><a href="/admin/energotechnology/energotechnologyall/" class="changelink">Изменить</a></td>
+
+            </tr>
+
+
+
+            <tr class="model-energotechnologywater">
+
+                <th scope="row" ><a href="/admin/energotechnology/energotechnologywater/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Вода</a></th>
+
+
+
+                <td><a href="/admin/energotechnology/energotechnologywater/add/" class="addlink">Добавить</a></td>
+
+
+
+                <td><a href="/admin/energotechnology/energotechnologywater/" class="changelink">Изменить</a></td>
+
+            </tr>
+
+            </body>
+
+
+            <tr class="model-energotechnologyeast">
+
+                <th scope="row"><a href="/admin/energotechnology/energotechnologyeast/"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Земля</a></th>
+
+
+
+                <td><a href="/admin/energotechnology/energotechnologyeast/add/" class="addlink">Добавить</a></td>
+                <td><a href="/admin/energotechnology/energotechnologyeast/add/" class="deletelink">Удалить</a></td>
+
+
+                <td><a href="/admin/energotechnology/energotechnologyeast/" class="changelink">Изменить</a></td>
+
+            </tr>
+
+
+            <tr class="model-energotechnologyosveshenie">
+
+                <th scope="row"><a href="/admin/energotechnology/energotechnologyosveshenie/"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Освещение</a></th>
+
+
+
+                <td><a href="/admin/energotechnology/energotechnologyosveshenie/add/" class="addlink">Добавить</a></td>
+
+
+
+                <td><a href="/admin/energotechnology/energotechnologyosveshenie/" class="changelink">Изменить</a></td>
+
+            </tr>
+
+            <tr class="model-energotechnologyotoplenie">
+
+                <th scope="row"><a href="/admin/energotechnology/energotechnologyotoplenie/"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Отопление</a></th>
+
+
+
+                <td><a href="/admin/energotechnology/energotechnologyotoplenie/add/" class="addlink">Добавить</a></td>
+
+
+
+                <td><a href="/admin/energotechnology/energotechnologyotoplenie/" class="changelink">Изменить</a></td>
+
+            </tr>
+
+            <tr class="model-energotechnologysun">
+
+                <th scope="row"><a href="/admin/energotechnology/energotechnologysun/"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Солнце</a></th>
+
+
+
+                <td><a href="/admin/energotechnology/energotechnologysun/add/" class="addlink">Добавить</a></td>
+
+
+
+                <td><a href="/admin/energotechnology/energotechnologysun/" class="changelink">Изменить</a></td>
+
+            </tr>
+
+        </table>
+        </div>
+
+
+            </tr>
+
+
+
+
+
+        </table>
     </div>
-  </div>
-  <div id="footer">
-    <hr>
-    <ul id="subnav">
-      <li><a href="http://energoforum/energotechnology.html">Энерготехнологии</a></li>
-      <li><a href="http://energoforum/info.html">Информация</a></li>
-      <li><a href="http://energoforum/catalog.html">Магазин</a></li>
-      <li><a href="http://energoforum/faq.html">FAQ</a></li>
-      <li><a href="http://energoforum/contact.html">Контакты</a></li>
-    </ul>
-    <address class="author vcard">
-      <a class="fn n org url work" rel="me" href="http://energoforum.com/">Energoforum.com</a>. © 2009. Все права защищены.
-    </address>
-    <div class="partners">
-      <h2>Партнеры</h2>
-      <ul>
-        <li class="texinfo"><a href="http://energoforum/faq.html">texinfo.ru<span></span></a></li>
-        <li class="techhome"><a href="http://energoforum/faq.html">techhome<span></span></a></li>
-        <li class="somecompany"><a href="http://energoforum/faq.html">some company<span></span></a></li>
-      </ul>
-    </div>
-  </div>
-  <div id="bottom">
-  </div>
-<!--
-  <div class="podbor">
-  	<a href="/podbor.html"><span></span></a>
-  </div>
-
-  <div class="discount">
-  	<a href="/discount.html"><span></span></a>
-  </div>
- -->
-</div>
-
-<div id="LG_overlay" style="background: rgb(0, 0, 0); display: none; opacity: 0.0085;"></div><div id="LG_container"><div id="LG_loading"></div><div id="LG_innerCont"><div id="LG
-
-</body>
-</html>
