--- a/templates/energoforum_tag.html
+++ b/templates/energoforum_tag.html
@@ -1,27 +1,55 @@
+       {% for model in list_model %}
+          {% if model.Hi == True %}
 
-
-
-
-        {% for model in list_model %}
             <tr class="model-{{ model.object_name|lower }}">
             {% if model.admin_url %}
+                {% if model.add_url %}
+                <th scope="row"><a href="{{ model.add_url }}">{{ model.name }} </a></th>
+                {%else%}
+                <th scope="row"><a href="{{ model.admin_url }}{{model.object.id}}/change/">{{ model.name }} </a></th>
+                {%endif%}
 
-                <th scope="row"><a href="{{ model.admin_url }}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ model.name }}</a></th>
-                Это тут
             {% else %}
-                А это тут
+
+                <th scope="row">{{ model.name }} </th>
+            {% endif %}
+
+            {% if model.add_url %}
+                <td><a href="{{ model.add_url }}" class="addlink">Добавить</a></td>
+            {% else %}
+                <td><a href="{{ model.admin_url }}{{model.object.id}}/change/" class="changelink">Изменить</a></td>
+                <td><a href="{{ model.admin_url }}{{model.object.id}}/delete/" class="deletelink">Удалить</a></td>
+            {% endif %}
+
+            </tr>
+          {%endif%}
+        {% endfor %}
+
+        {% for model in list_model %}
+          {%if model.Lo == True %}
+
+            <tr class="model-{{ model.object_name|lower }}">
+            {% if model.admin_url %}
+                {% if model.add_url %}
+                    <th scope="row"><a href="{{ model.add_url }}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ model.name }} </a></th>
+                {%else%}
+                    <th scope="row"><a href="{{ model.admin_url }}{{model.object.id}}/change/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ model.name }} </a></th>
+                {%endif%}
+
+            {% else %}
+
                 <th scope="row">{{ model.name }}</th>
             {% endif %}
 
             {% if model.add_url %}
                 <td><a href="{{ model.add_url }}" class="addlink">Добавить</a></td>
             {% else %}
-                <td><a href="{{ model.admin_url }}" class="changelink">Изменить</a></td>
+                <td><a href="{{ model.admin_url }}{{model.object.id}}/change/" class="changelink">Изменить</a></td>
                 <td><a href="{{ model.admin_url }}{{model.object.id}}/delete/" class="deletelink">Удалить</a></td>
             {% endif %}
 
-
             </tr>
+       {%endif%}
         {% endfor %}
 
 
