--- a/templates/base_forum.html
+++ b/templates/base_forum.html
@@ -363,7 +363,7 @@ function DoWin(namehtm,wwin,hwin) {
 {% if "testimonials" in  request.path  %}  <div id="header" class="n_info">  {%endif %}
 {% if "/news/" in  request.path  %}  <div id="header" class="n_energo">  {%endif %}
 {% if "/skipopros/" in  request.path  %}  <div id="header" class="n_energo">  {%endif %}
-
+{% if "dashboard" in  request.path  %}  <div id="header" class="n_info">  {%endif %}
 
 
 <div id="divaddtocart"></div>
