--- a/content/templates/newsList.html
+++ b/content/templates/newsList.html
@@ -1,8 +1,8 @@
-{% extends "base_forum.html" %}
+{% extends "base.html" %}
 
 {% block content%}
 
-<div id="content-text">
+
    {%for news in news_list%}
  		<table>
 			<tbody><tr>
@@ -37,5 +37,5 @@
     </span>
 </div>
 
-</div>
+
 {% endblock %}
