--- a/staticpages/templates/contact.html
+++ b/staticpages/templates/contact.html
@@ -1,13 +1,11 @@
-{% extends "base_forum.html" %}
+{% extends "base.html" %}
 
 {% block content%}
 {% load staticfiles %}
-<div id="content-text">
 
            {{index.textContact|safe|default:'' }}
 
 
-</div>
 
 
 
