--- a/content/templates/news.html
+++ b/content/templates/news.html
@@ -1,8 +1,8 @@
-{% extends "base_forum.html" %}
+{% extends "base.html" %}
 
 {% block content%}
 
-<div id="content-text">
+
 
 			<a href="/news/">Архив новостей</a><br>
 
@@ -12,5 +12,5 @@
             {{news.textNews|safe|default:''}}
 
 
-</div>
+
 {% endblock %}
