--- a/content/templates/testimonials.html
+++ b/content/templates/testimonials.html
@@ -1,7 +1,6 @@
-{% extends "base_forum.html" %}
+{% extends "base.html" %}
 
 {% block content%}
-<div id="content-text">
 
             <h1>Отзывы</h1>
       <h5>Добавить отзыв</h5>
@@ -78,6 +77,5 @@
 </div>
 
 
-</div>
 
 {% endblock %}
