--- a/staticpages/templates/faq.html
+++ b/staticpages/templates/faq.html
@@ -1,9 +1,8 @@
-{% extends "base_forum.html" %}
+{% extends "base.html" %}
 
 {% block content%}
 
 <body>
-<div id="content-text">
 
    {%for text in faq_list%}
  		<table>
@@ -39,7 +38,6 @@
     </span>
 </div>
 
-</div>
 
 
 </body>
