--- a/staticpages/templates/index.html
+++ b/staticpages/templates/index.html
@@ -1,8 +1,8 @@
-{% extends "base_forum.html" %}
+{% extends "base.html" %}
 
 {% block content%}
 {% load staticfiles %}
-<div id="content-text">
+
            <h1>{{index.title}} </h1>
            {{index.mainText|safe|default:'' }}
 <!--  Баннер -->
@@ -11,7 +11,6 @@
       </div>
 <!-- /Баннер -->
 
-</div>
 
 
 
