--- a/staticpages/templates/info.html
+++ b/staticpages/templates/info.html
@@ -1,12 +1,10 @@
-{% extends "base_forum.html" %}
+{% extends "base.html" %}
 
 {% block content%}
 
-<div id="content-text">
 
             <h1>{{info.title}} </h1>
            {{info.infoText|safe|default:'' }}
 
 
-</div>
 {% endblock %}
